[d3d] 채팅 input 추가

--- a/web-diary3d-client/src/index.html
+++ b/web-diary3d-client/src/index.html
@@ -3,13 +3,20 @@
   <head>
     <meta charset="utf-8" />
     <title>three.js example</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Gaegu">
+
+
     <style>
       body {
         margin: 0px;
+      }
+      input {
+        font-family: 'Gaegu', sans-serif;
+        
       }
     </style>
   </head>
   <body>
     <script src="index.js"></script>
   </body>
-</html>
+</html
