[d3d] 웹 폰트 변경
깜빡임 현상 때문에 변경하였습니다.

--- a/web-diary3d-client/src/index.html
+++ b/web-diary3d-client/src/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="utf-8" />
     <title>three.js example</title>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Gaegu">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Gamja+Flower&display=swap">
+
 
 
     <style>
@@ -11,8 +12,7 @@
         margin: 0px;
       }
       input {
-        font-family: 'Gaegu', sans-serif;
-        
+        font-family: 'Gamja Flower', sans-serif;
       }
     </style>
   </head>
