--- a/web-diary3d-client/src/index.html
+++ b/web-diary3d-client/src/index.html
@@ -2,32 +2,22 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="user-scalable=no" />
+    <!-- <meta name="viewport" content="user-scalable=no" /> -->
+    <meta name="viewport" content="initial-scale=1.0, user-scalable=no, maximum-scale=1, width=device-width" />
     <title>three.js example</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Gamja+Flower&display=swap">
-
-
-
-    <style>
-      :root {
-        --font-family: 'Gamja Flower', sans-serif;
-      }
-
-      body {
-        margin: 0px;
-      }
-
-      input {
-        font-family: var(--font-family);
-      }
-
-      button {
-        font-family: var(--font-family);
-      }
-
-    </style>
+    <link rel="stylesheet" href="index.css">
   </head>
   <body>
+    <div id="splash-view">
+      <div id="progress-container">
+        <img id="progress-bar-container" src="./assets/loading-empty.png" alt="loading empty">
+        <img id="progress-bar" src="./assets/loading-full.png" alt="loading full">
+        <div id="progress-text">
+          <span>다이어리 꾸미는 중...</span>
+        </div>
+      </div>
+    </div>
     <script src="index.js"></script>
   </body>
 </html
