[d3d] refactor game, network, scene & input

--- a/web-diary3d-client/src/index.html
+++ b/web-diary3d-client/src/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="index.css">
   </head>
   <body>
-    <div id="splash-view">
+    <!-- <div id="splash-view">
       <div id="progress-container">
         <img id="progress-bar-container" src="./assets/loading-empty.png" alt="loading empty">
         <img id="progress-bar" src="./assets/loading-full.png" alt="loading full">
@@ -17,7 +17,7 @@
           <span>다이어리 꾸미는 중...</span>
         </div>
       </div>
-    </div>
+    </div> -->
     <script src="index.js"></script>
   </body>
 </html
